--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,12 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/index.js",
-        "use": "@vercel/node"
-      }
+      {"src": "*.js","use": "@vercel/node" }
     ],
     "routes": [
       {
-        "src": "/calculate-distance",
-        "dest": "/api/index.js"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
-  
